Draft of the report

--- a/XAI_GenAI.ipynb
+++ b/XAI_GenAI.ipynb
@@ -1494,7 +1494,7 @@
     "\n",
     "## 4. EXERCISE: Try more examples; maybe come up with your own. Report the results.\n",
     "\n",
-    "* Try to come up with more examples and, change the anchor word/number of responses, and observe the results. What does the explanation mean? Do you think it's a nice explanation? Why and why not? \n"
+    "* Try to come up with more examples and, change the anchor word/number of responses, and observe the results"
    ]
   },
   {
@@ -1516,11 +1516,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> NOTE: The experiment will be conducted with a maximum of 20 prompts per word due to limited computational power."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1647,12 +1647,13 @@
     }
    ],
    "source": [
+    "## Orginal word order with Tokyo as anchor word\n",
     "make_expermient(\"Tokyo is the capital of Japan\", 0, 20, model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1769,16 @@
     }
    ],
    "source": [
+    "# Reversed word order with Tokyo as anchor word\n",
     "make_expermient(\"The capital of Japan is Tokyo\", 5, 20, model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "> Changing the word order changes the PMI scores. Although Japan is still strongly \"correlated\" with Tokyo, we can see a big difference in words like \"The\" and \"capital.\" This is most probably because of the small number of prompts per word, as even one example can greatly affect the score. On the other hand, it could be connected to the model architecture."
    ]
   },
   {
@@ -1906,6 +1916,14 @@
    ],
    "source": [
     "make_expermient(\"The bank by the river is closed\", 1, 20, model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "> We can see that when choosing hard-to-guess words, the score does not provide useful information."
    ]
   },
   {
@@ -2067,7 +2085,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* What's the limitation of the current method? When does the method fail to explain? "
+    "### Conclusion\n",
+    "> The PMI seems to work okay for longer sentences, but here the strict similarity gives words like \"goal\" a low value (because the model predicts \"destination\" instead of \"goal\")."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What does the explanation mean?\n",
+    "> From the equation $PMI(x,y)=log_2⁡ \\frac{p(\\{x,y\\}| s-\\{x,y\\})}{P(\\{x\\}|s-\\{x,y\\})P(\\{y\\}|s-\\{x,y\\})}$, we can conclude that the score will be high for two masked words that are both rare but usually occur together.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "* Do you think it's a nice explanation? Why and why not?\n",
+    "> The explanation tries to capture the crucial dependencies between generated words, favoring the \"nuanced\" dependencies and trying to diminish dependencies with obvious pairs like \"Subject\" and \"is\". The explanation is nice because it works on proprietary models without access to the model weights, but there are quite a lot of limitations that will be discussed in the next question.\n",
+    "\n",
+    "\n",
+    "* What's the limitation of the current method? When does the method fail to explain? \n",
+    "> - First of all, this method will yield consistent results only with a high number of prompts per tested word, which is cost/resources expensive.\n",
+    "> - The choice of prefix prompt will change the experiment results.\n",
+    "> - The chosen model doesn't follow the prefix prompt in many cases and provides more than one word for a mask.\n",
+    "> - For anchor words that are hard to predict based on the provided context, the method will fail to provide useful dependencies between words.\n"
    ]
   },
   {
@@ -2095,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2148,8 @@
       "Cosine Similarity for city and metropolis : 0.6352933049201965\n",
       "Cosine Similarity for Denmark, Poland : 0.5210166573524475\n",
       "Cosine Similarity for tokyo, tokyo : 1.0\n",
-      "Cosine Similarity for tokyo, poland : 0.17721477150917053\n"
+      "Cosine Similarity for tokyo, poland : 0.17721477150917053\n",
+      "Cosine Similarity for the [mask], the : 0.42838403582572937\n"
      ]
     }
    ],
@@ -2140,7 +2184,10 @@
     "\n",
     "# example of two words with small similarity\n",
     "similarity = cosine_similarity_func(\"tokyo\", \"poland\")\n",
-    "print(f\"Cosine Similarity for tokyo, poland : {similarity}\")"
+    "print(f\"Cosine Similarity for tokyo, poland : {similarity}\")\n",
+    "\n",
+    "similarity = cosine_similarity_func(\"the [mask]\", \"the\")\n",
+    "print(f\"Cosine Similarity for the [mask], the : {similarity}\")"
    ]
   },
   {
@@ -2400,6 +2447,14 @@
    "source": [
     "# cosine similarity experiment\n",
     "make_expermient(\"Tokyo is the capital of Japan\", 0, 20, model, similarity_function=cosine_similarity_func) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "> We can see that after applying the cosine similarity, the PMI is more focused on \"important\" words like capital and Japan, which in my opinion, give a better explanation. "
    ]
   },
   {
@@ -2798,6 +2853,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Conclusions\n",
+    "> As expected when using the cosine similarity the PMI for nontipical words like \"metropolis\" is higher than when using the exact match. This is because the model provides words that are similar to the masked word, but not the same."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### The ship experiment"
    ]
   },
@@ -3108,6 +3171,22 @@
    "source": [
     "# cosine similarity experiment\n",
     "make_expermient(\"Despite the storm the ship sailed toward its goal\", 4, 20, model, similarity_function=cosine_similarity_func)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "> The cosine similarity seems to work well for the ship experiment, as the model provides words that are similar to the masked word, but not the same."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusions\n",
+    "In this project, we have shown how to explain a generative model using the PMI method. We have also shown how to improve the method by using cosine similarity instead of exact matching. The method has some limitations, but it can still provide useful insights into the model's behavior."
    ]
   }
  ],
