--- a/XAI_GenAI.ipynb
+++ b/XAI_GenAI.ipynb
@@ -1292,14 +1292,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> NOTE: The experiment will be conducted with a maximum of 20 prompts per word due to limited computational power."
+    "> **Note:** The experiment will be conducted with a maximum of 20 prompts per word due to limited computational resources."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compering PMI when we change the word order"
+    "### Comparing PMI when we change the word order"
    ]
   },
   {
@@ -2226,7 +2226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing diffrences on the provided prompt"
+    "### Testing differences on the provided prompt"
    ]
   },
   {
@@ -2917,7 +2917,7 @@
    "metadata": {},
    "source": [
     "#### Conclusion\n",
-    "> The cosine similarity seems to work well for the ship experiment, as the model provides words that are similar to the masked word, but not the same."
+    "> The cosine similarity correctly identifies similarity between goal and destination, and ovearll the PMI is more focused on the important words."
    ]
   },
   {
@@ -2945,7 +2945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
